--- a/css/game.css
+++ b/css/game.css
@@ -10,7 +10,6 @@
 .card {
     aspect-ratio: 3/4;
     width: 100%;
-    background-color: #333;
     border-radius: 5px;
     position: relative;
     transition: all 400ms ease;
@@ -25,10 +24,10 @@
     background-position: center;
     border: 2px solid #a52a2a;
     border-radius: 5px;
+    transition: all 400ms ease;
 }
 
 .front {
-    background-image: url('../images/goku.png');
     transform: rotateY(180deg);
 }
 
@@ -37,6 +36,11 @@
     backface-visibility: hidden;
 }
 
-.card:hover {
+.reveal-card {
     transform: rotateY(180deg);
+}
+
+.disabled-card {
+    filter: saturate(0);
+    opacity: 0.5;
 }
