Adicionei Modal com NamePlayer e Timer

--- a/css/game.css
+++ b/css/game.css
@@ -38,7 +38,9 @@ header {
     border-radius: 5px;
     position: relative;
     background-color: #ccc;
-
+    transition: all 0.4s ease;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
     -webkit-transition: all 0.4s ease;
     -webkit-transform-style: preserve-3d;
     -webkit-backface-visibility: hidden;
@@ -52,7 +54,8 @@ header {
     background-position: center;
     border: 2px solid #a52a2a;
     border-radius: 5px;
-
+    transition: all 0.4s ease;
+    backface-visibility: hidden;
     -webkit-transition: all 0.4s ease;
     -webkit-backface-visibility: hidden;
 }
@@ -96,4 +99,72 @@ button.refresh:disabled {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
     }
+    .modal {
+        padding-top: 100px;
+    }
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80% !important;
+        padding-top: 30px !important;
+    }
+    .close {
+        margin-top: -30px !important;
+    }
+    .player,
+    .timer-texto,
+    .timer,
+    .refresh {
+        font-size: 0.7em !important;
+    }
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 200px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+
+    text-align: center;
+    border-radius: 10px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* The Close Button */
+.close {
+    width: 20px;
+    height: 10px;
+    margin-top: -20px;
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
