--- a/css/game.css
+++ b/css/game.css
@@ -168,6 +168,7 @@ button.refresh:disabled {
         max-width: 270px;
         text-align: center;
         line-height: 1.5;
+        font-size: 0.5em !important;
     }
 }
 
