--- a/css/game.css
+++ b/css/game.css
@@ -217,21 +217,7 @@ button.rankButton:disabled {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 200px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
-
-.modal2 {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 200px; /* Location of the box */
+    padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -261,23 +247,6 @@ button.rankButton:disabled {
     max-width: 300px;
     margin: auto;
 }
-
-/* Modal Content Rank */
-.modal-content2 {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 40%;
-
-    text-align: center;
-    border-radius: 10px;
-}
-
-.modal-content2 hr {
-    border-top: 1px solid red;
-}
-
 /* The Close Button */
 .close {
     width: 20px;
@@ -294,6 +263,37 @@ button.rankButton:disabled {
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+/* Start style modal 2 */
+.modal2 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 200px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content Rank */
+.modal-content2 {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+
+    text-align: center;
+    border-radius: 10px;
+}
+
+.modal-content2 hr {
+    border-top: 1px solid red;
 }
 
 /* The Close Button */
