--- a/css/game.css
+++ b/css/game.css
@@ -209,19 +209,41 @@ button.rankButton:disabled {
     margin-top: 20px;
     color: #fff;
     text-shadow: 2px 1px #000;
-    position: relative;
 }
 
 .footer a {
     color: #fff;
     text-decoration: none;
-    background-color: #a52a2a;
-    padding: 0px 5px;
     border-radius: 5px;
+    text-align: center !important;
 }
 
 .footer a:hover {
     animation: pulse 1s infinite;
+    animation-timing-function: linear;
+}
+
+/* BOTÃO SAIR DO JOGO */
+.footer-sair {
+    color: #fff;
+    margin-top: 10px;
+    text-shadow: 2px 1px #000;
+}
+
+.footer-sair a {
+    color: #fff;
+    text-decoration: none;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    padding: 0 10px;
+    text-align: center !important;
+}
+
+.footer-sair a:hover {
+    color: #fff;
+    text-shadow: 2px 1px #333;
+    animation: pulse2 1s infinite;
     animation-timing-function: linear;
 }
 
@@ -267,6 +289,23 @@ tr:nth-child(even) {
     100% {
         transform: scale(0.95);
         box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
+@keyframes pulse2 {
+    0% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(165, 42, 42, 0.7);
+    }
+
+    70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 10px rgba(165, 42, 42, 0);
+    }
+
+    100% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(165, 42, 42, 0);
     }
 }
 
