--- a/css/game.css
+++ b/css/game.css
@@ -213,6 +213,7 @@ button.rankButton:disabled {
 }
 .footer_container_row {
     max-width: 1000px;
+    min-width: 325px;
     margin: auto;
     display: flex;
     min-height: 60px;
@@ -474,6 +475,38 @@ tr:nth-child(even) {
 
     .refresh {
         margin-right: 17px;
+    }
+
+    .tabelaRankingList {
+        font-size: 13px !important;
+    }
+
+    .footer_container_row {
+        width: 100%;
+        display: flex;
+        color: #ccc;
+        font-size: 0.8em;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px 10px;
+    }
+    .footer_left {
+        flex: 100;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer_right {
+        flex: 100;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 345px) {
+    .footer_left {
+        margin-bottom: 20px;
     }
 }
 
